# AI-logistics-orchestrator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
brain-service/: README.md  graph.py  main.py  pyproject.toml  requirements.txt
brain-service/agents/: governance_agent.py  pricing_agent.py  router_agent.py  tracking_agent.py  validation_agent.py
brain-service/docs/: architecture.md  dfd.md
brain-service/schemas/: quote.py  shipment.py
brain-service/src/agents/: dialogue_manager_agent.py  governance_agent.py  label_agent.py  pricing_agent.py  router_agent.py  tracking_agent.py
brain-service/src/api/: chat_controller.py
brain-service/src/db/: conversation_db.py  memory_store.py
brain-service/src/llm/: llm_client.py  mcp_client.py
brain-service/src/models/: models.py
brain-service/src/prompts/: governance.txt  intent_prompt.txt  pricing.txt  response_style.txt  router.txt  tracking.txt
brain-service/src/services/: conversation_service.py  graph.py  intent_service.py  rag_service.py
brain-service/src/state/: state.py
brain-service/src/static/: index.html
chat-ui/: package-lock.json
docs/: README.md  project-structure.md  sequence.mmd
execution-server/: go.mod  main.go
execution-server/internal/: circuitbreaker.go  concurrency.go  errors.go  idempotency.go  idempotency_config.go  models.go  server.go  validation.go
frontend/: package.json
infrastructure/: Dockerfile.brain  Dockerfile.execution  docker-compose.yml
src/: __init__.py  config.py  graph.py  sqlite_db.py
tests/: README.md
(+57 files in other folders)
