[tool.poetry]
authors = ["Loomis AI Team <ai@loomis.com>"]
description = "Reasoning and orchestration service for Loomis Agentic Logistics"
name = "brain-service"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.110.0"
httpx = "^0.27.0"
langgraph = "^0.0.8"
pydantic = "^2.5.2"
python = ">=3.10,<3.12"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
